Fix color contrasts in find recipe template styles

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1120,7 +1120,7 @@ nav a:hover {
 .pagination-info {
     font-size: 16px;
     font-weight: bold;
-    color: #7a7a7a;
+    color: #494949;
 }
 
 /* No Recipes Message */
